--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         box-sizing: border-box;
     }
     body{
-        background-color: #000000;
+        background: linear-gradient(#D9D9D9,rgb(186, 176, 176),#091B25);
     }
     a{
         text-decoration: none;
@@ -35,33 +35,33 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: white;
+    background-color: black;
     border-top-left-radius: 30px;">
     <a href="#" class="logo" style="font-size: 25px;
-    color:black;
+    color:#fff;
     font-weight: 500;">Portfolio</a>
     <nav>
         <a href="#" id="home" style="margin-left: 75px;
     font-size: 18px;
-    color: black;
+    color: #fff;
     font-weight: 300;
     font-size: 18px;
     font-family: 'Nunito Sans';">Home</a>
         <a href="#skills" style="margin-left: 75px;
     font-size: 18px;
-    color: black;
+    color: #fff;
     font-weight: 300;
     font-size: 18px;
     font-family: 'Nunito Sans';">Skills</a>
         <a href="https://github.com/sadneya145" style="margin-left: 75px;
     font-size: 18px;
-    color: black;
+    color: #fff;
     font-weight: 300;
     font-size: 18px;
     font-family: 'Nunito Sans';">Projects</a>
         <a href="#contact" style="margin-left: 75px;
     font-size: 18px;
-    color: black;
+    color: #fff;
     font-weight:300;
     font-size: 18px;
     font-family: 'Nunito Sans';">Contact</a>
